Remove no-longer-needed casting. Use Integer.valueOf() instead of new Integer().